Word wrap some long links to avoid horizontal scrolling on mobile.

--- a/generic-functions-and-methods/index.css
+++ b/generic-functions-and-methods/index.css
@@ -116,6 +116,7 @@
     border: none;
     border-left: medium solid transparent;
     font-size: inherit;
+    white-space: initial;
 }
 
 .horizontally-aligned-titles-and-tabs .tabs.contains-title > h1 > a {
